<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Offset</string>
    <string name="title_activity_main">Offset</string>
    <string name="package_name">com.afterthought.offset</string>
    <string name="custom_url_scheme">com.afterthought.offset</string>
    <string name="shortcut_transactions">Transactions</string>
    <string name="shortcut_transactions_long">Open transactions</string>
    <string name="shortcut_statements">Statements</string>
    <string name="shortcut_statements_long">Open statements</string>
    <string name="shortcut_settings">Settings</string>
    <string name="shortcut_settings_long">Open settings</string>
    <string name="shortcut_add">Add transaction</string>
    <string name="shortcut_add_long">Add a transaction</string>
</resources>
